--- a/settings.json
+++ b/settings.json
@@ -39,10 +39,11 @@
         "editor.formatOnSave": false
     },
     "[javascriptreact]": {
-        "editor.formatOnSave": false
+        "editor.formatOnSave": true
     },
     "[typescript]": {
-        "editor.formatOnSave": false
+        "editor.formatOnSave": false,
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
     },
     "[typescriptreact]": {
         "editor.formatOnSave": false
@@ -59,7 +60,8 @@
             "autoFix": true
         }
     ],
-    "[typescript]": {
-        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    "workbench.colorCustomizations": {
+        "window.activeBorder": "#d1cdcd11",
+        "activityBar.activeBorder": "#FFA500",
+        "activityBarBadge.background": "#ff0000",
     }
-}
