--- a/settings.json
+++ b/settings.json
@@ -34,12 +34,12 @@
     "window.zoomLevel": 0,
     "javascript.updateImportsOnFileMove.enabled": "always",
     "javascript.implicitProjectConfig.experimentalDecorators": true,
-    "editor.formatOnSave": true,
+    "editor.formatOnSave": false,
     "[javascript]": {
         "editor.formatOnSave": false
     },
     "[javascriptreact]": {
-        "editor.formatOnSave": true
+        "editor.formatOnSave": false
     },
     "[typescript]": {
         "editor.formatOnSave": false,
@@ -48,6 +48,7 @@
     "[typescriptreact]": {
         "editor.formatOnSave": false
     },
+    "eslint.autoFixOnSave": true,
     "eslint.validate": [
         "javascript",
         "javascriptreact",
@@ -65,3 +66,4 @@
         "activityBar.activeBorder": "#FFA500",
         "activityBarBadge.background": "#ff0000",
     }
+}
