--- a/settings.json
+++ b/settings.json
@@ -49,9 +49,9 @@
     "activityBar.activeBorder": "#FFA500",
     "activityBarBadge.background": "#ff0000",
     "editor.findMatchBackground": "#e29300c4",
-    "statusBar.background": "#5f0000",
-    "statusBar.noFolderBackground": "#5f0000",
-    "statusBar.debuggingBackground": "#5f0000"
+    "statusBar.background": "#005f5f",
+    "statusBar.noFolderBackground": "#005f5f",
+    "statusBar.debuggingBackground": "#005f5f"
   },
   "vscode_custom_css.policy": true,
   "prettier.requireConfig": true,
@@ -66,4 +66,5 @@
   "editor.renderControlCharacters": false,
   "editor.minimap.enabled": false,
   "editor.mouseWheelZoom": true,
+  "keyboard.dispatch": "keyCode",
 }
