Change settings and keybindings

--- a/settings.json
+++ b/settings.json
@@ -1,16 +1,31 @@
 {
+  "editor.suggestSelection": "first",
+  "editor.renderControlCharacters": false,
+  "editor.minimap.enabled": true,
+  "editor.mouseWheelZoom": true,
   "editor.multiCursorModifier": "ctrlCmd",
   "editor.formatOnPaste": true,
   "editor.tabSize": 2,
   "editor.fontFamily": "Dank Mono",
-  "editor.fontSize": 13,
   "editor.fontLigatures": true,
   "editor.codeActionsOnSave": {
     "source.fixAll.tslint": true
   },
+  "editor.defaultFormatter": "dbaeumer.vscode-eslint",
+  "editor.formatOnSave": true,
   "workbench.colorTheme": "Monokai Operator",
   "workbench.startupEditor": "newUntitledFile",
   "workbench.iconTheme": "material-icon-theme",
+  "workbench.activityBar.visible": true,
+  "workbench.colorCustomizations": {
+    "window.activeBorder": "#d1cdcd11",
+    "activityBar.activeBorder": "#FFA500",
+    "activityBarBadge.background": "#ff0000",
+    "editor.findMatchBackground": "#e29300c4",
+    "statusBar.background": "#005f5f",
+    "statusBar.noFolderBackground": "#005f5f",
+    "statusBar.debuggingBackground": "#005f5f"
+  },
   "files.autoSaveDelay": 4500,
   "files.autoSave": "off",
   "explorer.confirmDelete": false,
@@ -42,38 +57,25 @@
   "commentAnchors.workspace.excludeFiles": "**/{node_modules,platforms,.git,.idea,target,out,build,vendor}/**/*",
   "javascript.updateImportsOnFileMove.enabled": "always",
   "javascript.implicitProjectConfig.experimentalDecorators": true,
-  "editor.formatOnSave": true,
-  "workbench.colorCustomizations": {
-    "window.activeBorder": "#d1cdcd11",
-    "activityBar.activeBorder": "#FFA500",
-    "activityBarBadge.background": "#ff0000",
-    "editor.findMatchBackground": "#e29300c4",
-    "statusBar.background": "#005f5f",
-    "statusBar.noFolderBackground": "#005f5f",
-    "statusBar.debuggingBackground": "#005f5f"
-  },
   "vscode_custom_css.policy": true,
-  "prettier.requireConfig": true,
-  "prettier.singleQuote": true,
-  "prettier.trailingComma": "es5",
   "typescriptHero.imports.stringQuoteStyle": "\"",
   "vim.highlightedyank.enable": true,
-  "vim.statusBarColorControl": true,
   "vim.camelCaseMotion.enable": true,
-  "editor.suggestSelection": "first",
+  "vim.easymotionDimBackground": false,
+  "vim.highlightedyank.duration": 400,
   "vsintellicode.modify.editor.suggestSelection": "automaticallyOverrodeDefaultValue",
-  "editor.renderControlCharacters": false,
-  "editor.minimap.enabled": true,
-  "editor.mouseWheelZoom": true,
   "[html]": {
     "editor.defaultFormatter": "vscode.html-language-features"
   },
   "dart.checkForSdkUpdates": false,
   "dart.lineLength": 2000,
-  "vim.easymotionDimBackground": false,
-  "vim.highlightedyank.duration": 400,
-  "customizeUI.titleBar": "inline",
-  "customizeUI.activityBar": "bottom",
-  "workbench.activityBar.visible": false,
   "keyboard.dispatch": "keyCode",
+  "[json]": {
+    "editor.defaultFormatter": "vscode.json-language-features"
+  },
+  "terminal.explorerKind": "external",
+  "terminal.external.osxExec": "iTerm.app",
+  "terminal.integrated.shell.osx": "/usr/local/bin/fish",
+  "prettier.printWidth": 100,
+  "vim.statusBarColorControl": true,
 }
