--- a/settings.json
+++ b/settings.json
@@ -8,6 +8,7 @@
   "editor.fontLigatures": true,
   "editor.defaultFormatter": "dbaeumer.vscode-eslint",
   "editor.formatOnSave": true,
+  "editor.wordWrap": "off",
   "workbench.colorTheme": "Monokai Operator",
   "workbench.startupEditor": "newUntitledFile",
   "workbench.iconTheme": "material-icon-theme",
@@ -71,4 +72,5 @@
   "prettier.printWidth": 100,
   "editor.renderWhitespace": "trailing",
   "editor.suggestSelection": "first",
+  "terminal.integrated.rendererType": "dom",
 }
