Add new extension list

--- a/settings.json
+++ b/settings.json
@@ -18,9 +18,9 @@
     "activityBar.activeBorder": "#FFA500",
     "activityBarBadge.background": "#ff0000",
     "editor.findMatchBackground": "#e29300c4",
-    "statusBar.background": "#5f0000",
-    "statusBar.noFolderBackground": "#5f0000",
-    "statusBar.debuggingBackground": "#5f0000"
+    "statusBar.background": "#005f5f",
+    "statusBar.noFolderBackground": "#005f5f",
+    "statusBar.debuggingBackground": "#005f5f"
   },
   "files.autoSave": "off",
   "window.zoomLevel": 1,
